# Deadline-Alert-Agent

./: .env.example  .gitignore  GOOGLE_CLOUD_SETUP.md  GROQ_QUICK_REFERENCE.md  GROQ_SETUP.md  LICENSE  MOBILE_DEPLOYMENT.md  MULTI_EMAIL_SETUP.md  OLLAMA_SETUP.md  PROJECT_SETUP_COMPLETE.md  QUICKSTART.md  README.md  SECURITY_GUIDE.md  WARP.md  WHATSAPP_INTEGRATION_GUIDE.md  WHATSAPP_SETUP.md  main.py  nixpacks.toml  phase.md  pubspec.yaml  pyproject.toml  requirements.txt  run_app_demo.sh  start_project.sh  test_full_project.py
app/: main.py
app/api/: deadlines.py  ingestion.py  settings_api.py
app/core/: config.py  db.py
app/models/: __init__.py  deadline.py  (+1 more)
backend/: .env.template  app.py  chat_handler.py  database.py  email_accounts.template.json  fcm_notify.py  gmail_ingest.py  gmail_oauth_ingest.py  llm_deadline_extractor.py  llm_provider.py  main.py  models.py  multi_gmail_ingest.py  notify.py  oauth_server.py  onesignal_notify.py  requirements.txt  run_server.py  service.py  tasks.db  test_api.py  test_gmail.py  test_whatsapp.py  test_whatsapp_integration.py  validate_email_config.py  whatsapp_commands.txt  whatsapp_ingest.py  whatsapp_notify.py
deadline_alert_app/: .env.example  pubspec.yaml
docs/: SETUP.md  phase-0-decisions.md
gmail_whatsapp_deadlines/: .flutter-plugins-dependencies  HOW_TO_RUN_APP.md  README.md  pubspec.yaml  run_app.sh
lib/: main.dart
scripts/: backup_db.sh  poll_and_notify.sh  setup-whatsapp.sh  test_mobile_push.sh  test_mobile_push_fcm.sh
src/: gmail_reader.py
test/: widget_test.dart
windows/: CMakeLists.txt
(+47 files in other folders)
